# satoyama-edge

./: .gitignore  README.md  config.h  run_edge.py
EthernetAggrNew/: EthernetAggrNew.ino
WebClientRepeating/: WebClientRepeating.ino
WifiAggregator/WifiAggregator/: WifiAggregator.ino
WifiAggregator/WifiAggregatorClean/: WifiAggregatorClean.ino
WifiAggregator/WifiAggregatorNew/: WifiAggregatorNew.ino
WifiAggregator/dual/chibi_part/: chibi_part.ino
WifiAggregator/dual/wifi_part/: wifi_part.ino
aggregator/: CMakeLists.txt  aggregator.cpp  aggregator.h
aggregator_cpp/: CMakeLists.txt  aggregator.cpp
chibi3GIMaggregator/: chibi3GIMaggregator.ino
chibiEthernetAggregator/: chibiEthernetAggregator.ino
dev/ethernet_connected_test/: ethernet_connected_test.ino
